...
          }
        }
      },
      child: AlertDialog(
        title: Text(
          widget.dialogTitle,
          key: const Key('confirmDialogTitleKey'),
        ),
        content: Text(widget.dialogContent),
        actions: <Widget>[
          TextButton(
            key: const Key('confirmButtonKey'),
            onPressed: () {
              // Execute the action function with arguments
              Function.apply(widget.actionFunction, widget.actionFunctionArgs);

              if (widget.warningFunction != null) {
                // If the warning function was passed, execute it with
...
